# fastapiscrapeproject

./: .env  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  dump.rdb  pyproject.toml
alembic/: env.py
alembic/versions/: 1f4caad00eb5_added_new_columns_to_jobs.py  3b954792b00a_create_jobs_table.py  c062c4773f1e_make_password_nullable_for_google_oauth_.py  c7d9b510d274_create_users_tableclearclea.py  d0fa1cb7be6f_update_user_model.py  fa266ba0037d_added_new_columns_to_jobs.py
app/: Dockerfile.dev  Dockerfile.prod  app.py  main.py
app/helper/: redis.py  utils.py
app/middleware/: middleware.py
app/routes/: __init__.py  auth_router.py  home_route.py  jobs_router.py  routes.py  users_router.py
app/schema/: auth_schema.py  job_schema.py  schema.py  user_schema.py
app/services/: auth.py  jobs.py  users.py
app/static/css/: footer.css  header.css  job_details.css  jobs.css  login.css  search.css  styles.css  user_register_form.css
app/static/js/: auth.js  jobUploadTime.js  login.js  search.js  togglePassword.js
app/templates/: 404.html  base.html  footer.html  header.html  index.html  job_details.html  jobs.html  login.html  search_form.html  user_register_form.html
app/views/: __init__.py  auth_view.py  home_view.py  job_view.py  users_view.py
backend/: Dockerfile.dev  Dockerfile.prod  db.py  main.py  models.py  modles.py
deploy/: backend-ec2.sh  scraper-ec2.sh
scraper/: .env  Dockerfile  celeryconfig.py  discovery.py  tasks.py
shared/: .env  backenddb.py  models.py  schema.py  scraperdb.py
